test/corpus/newline
================================================================================
preceeding comment
================================================================================

type X: record {
	# 
    #
	x: count;
};

--------------------------------------------------------------------------------

(source_file
  (decl
    (type_decl
      (id)
      (type
        (minor_comment)
        (minor_comment)
        (type_spec
          (id)
          (type))))))

================================================================================
trailing comment
================================================================================

type X: record {
	x: count;
	# 
    #
};

--------------------------------------------------------------------------------

(source_file
  (decl
    (type_decl
      (id)
      (type
        (type_spec
          (id)
          (type))
        (minor_comment)
        (minor_comment)))))
